chore: 添加托管机连通性检查
